# HighFive

./: .gitignore  README.md
backend/: build.gradle  settings.gradle
client/: .gitignore  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  Chat.css  Chat.tsx  index.css  main.tsx
client/src/api/: memberApi.js
client/src/app/: store.tsx
client/src/chat/: Chat.tsx  ChatControlSlice.tsx  TempMember.tsx  TempPage.tsx  WebSocketUtil.tsx  stompClient.ts
client/src/common/: Axios.tsx
client/src/company/: CompanyRoutes.tsx
client/src/features/: AppRoutes.tsx  TempPage.tsx  stompClient.ts
client/src/hooks/: useMembers.js
client/src/icons/: MapPinIcon.tsx
client/src/types/: post.ts
client/src/강우석/: CompanyApi.tsx  CompanyInfoInputModal.tsx
gpt-api/: README.md  pyproject.toml
gpt-api/app/core/: config.py
gpt_api/: .gitignore  pyproject.toml
gpt_api/src/gpt_api/: main.py
gpt_api/src/gpt_api/routers/: embedding_router.py  prompt_router.py
gpt_api/src/gpt_api/routes/: gpt.py
gpt_api/src/gpt_api/schemas/: gpt_schema.py  prompt_schema.py
gpt_api/src/gpt_api/services/: embedding_service.py  prompt_service.py
report/간트 차트/: 간트 차트.xlsx
report/기능정의서/: ~$기능 정의서_종합본_250502.xlsx  기능 정의서_종합본_250502.xlsx  기능정의서 2025년07월01일.xlsx  기능정의서 250703.xlsx
report/데이터베이스/: jobPrize.exerd
report/시퀀스 다이어그램/: Admin02_Sequence_Diagram.mdj  AdminPayment.mdj  AdminService.mdj  Chat.mdj  Company_Sequence_Diagram.mdj.mdj  Member_Sequence_Diagram.mdj.mdj  Payment.mdj  Subscription.mdj
(+1401 files in other folders)
