[project]
name = "gpt-api"
version = "0.1.0"
description = ""
authors = [
    {name = "africasergei",email = "yhcho4243@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "openai (>=1.81.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "gpt_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "gpt_api.main:main"