[project]
name = "gpt-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
packages = [{ include = "gpt_api", from = "src" }]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "openai (>=1.90.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.3"

[tool.poetry.scripts]
start = "gpt_api.main:main"